--- a/M03 HTML/index.html
+++ b/M03 HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./reset.css">
     <link rel="shortcut icon" href="./lamparaIcon.jpg" type="image/x-icom">
     <meta charset="UTF-8">
