nuevas correcciones HTML Y CSS

--- a/M03 HTML/index.html
+++ b/M03 HTML/index.html
@@ -104,10 +104,10 @@
 
     <article>
         <p>COMUNICATE CON NOSOTROS!</p>
+
+        <br>
     
-
-
-        <a href="./contacto.html" target="_blank">formulario de contacto</a> 
+        <a href="./contacto.html" target="_blank"><b>Formulario de contacto</b></a> 
 
         <div id="contactos">
             <div class="contactos-logos">
